Attempt 2 to prevent clipping of records info on mobile

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -199,6 +199,10 @@
         margin: 0 30px;
         margin-bottom: 30px;
     }
+
+    .recordLeft {
+        height: 40px;
+    }
 }
 
 .noResults {
